# adam-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
model/: pyproject.toml  train.jsonl
scripts/: build.sh  run.sh
src/: bot.rs  cfg.rs  chat.rs  commands.rs  constants.rs  handler.rs  history.rs  logging.rs  main.rs  message.rs  music.rs  openai.rs  state.rs  utils.rs  voice.rs
