[package]
name = "adam"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12", features = ["standard_framework", "voice"] }
songbird = { version = "0.4.0", features = ["builtin-queue"] }
symphonia = { version = "0.5.3", features = ["aac", "mp3", "isomp4", "alac"] }
